--- a/body-entrance/pom.xml
+++ b/body-entrance/pom.xml
@@ -20,6 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>com.siren</groupId>
+            <artifactId>siren</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.siren</groupId>
             <artifactId>body-pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
