--- a/body-service/pom.xml
+++ b/body-service/pom.xml
@@ -13,10 +13,14 @@
     <dependencies>
         <dependency>
             <groupId>com.siren</groupId>
+            <artifactId>siren</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.siren</groupId>
             <artifactId>body-pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
     </dependencies>
 
 </project>
