--- a/body-entrance/src/main/resources/config/application-dev.yml
+++ b/body-entrance/src/main/resources/config/application-dev.yml
@@ -25,8 +25,19 @@ spring:
         filters: stat,wall,log4j2
 
 siren:
-  swagger:
-      title: Body Of Siren
-      description: The kernel of Siren
-      termsOfServiceUrl: www.siren.com
-      version: 1.0.0
+  generator:
+    globalgenerator:
+      outPutDir:
+      author:
+      fileOverride:
+      activeRecord:
+      enableCache:
+      baseResultMap:
+      baseColumnList:
+      kotlin:
+      entityName:
+      mapperName:
+      xmlName:
+      serviceName:
+      serviceImplName:
+      controllerName:
